--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  mdeschaine
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minima
+theme: minima
 gems:
   - jekyll-feed
 exclude:
