--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: DigiMatt
+author: Mathieu Deschaine
 email: mathieu.deschaine@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Perspectives on archives and digital preservation.
